<resources>
    <string name="app_name">Biblio</string>

    <!-- General -->
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>

    <string name="name">Name</string>
    <string name="addElement">Add an element</string>
    <string name="errorMustSetName">You must set a name</string>
    <string name="errorNameNotAvailable">This name is not available</string>


    <!-- Main menu -->
    <string name="action1">action1</string>
    <string name="action2">action2</string>
    <string name="action3">action3</string>


    <!-- MAIN ACTIVITY -->
    <string name="mainTextHintSearch">Search a book</string>
    <string name="books">Books</string>
    <string name="authors">Authors</string>
    <string name="formats">Formats</string>
    <string name="series">Series</string>
    <string name="themes">Themes</string>


    <!-- BOOKS ACTIVITY -->
    <string name="addBook">Add a book</string>

    <string name="book">Book</string>
    <string name="title">Title</string>
    <string name="subbtitle">Subtitle</string>
    <string name="author">Author</string>
    <string name="format">Format</string>
    <string name="serie">Serie</string>
    <string name="theme">Theme</string>
    <string name="year">Year</string>
    <string name="number">Number</string>
    <string name="bookshelfnumber">Bookshelf number</string>
    <string name="description">Description</string>
    <string name="got">Got</string>
    <string name="rate">Rate</string>

    <string name="errorTitleSubtitleNotAvailable">This title and subtitle are not available</string>
    <string name="errorMustSetTitle">You must set a title</string>

    <string name="bookDeleteConfirmation">Do you want to delete this book ?</string>

</resources>
