<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="64dp"
    tools:context=".MainActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    >

    <!-- BOOKS -->
    <Button
        android:id="@+id/buttonBooks"
        android:text="@string/books"
        android:onClick="buttonBooks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <!-- AUTHORS -->
    <Button
        android:id="@+id/buttonAuthors"
        android:text="@string/authors"
        android:onClick="buttonAuthors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <!-- FORMATS -->
    <Button
        android:id="@+id/buttonFormats"
        android:text="@string/formats"
        android:onClick="buttonFormats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <!-- SERIES -->
    <Button
        android:id="@+id/buttonSeries"
        android:text="@string/series"
        android:onClick="buttonSeries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <!-- THEMES -->
    <Button
        android:id="@+id/buttonThemes"
        android:text="@string/themes"
        android:onClick="buttonThemes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>
